--- a/src/snippets/collection-filters.liquid
+++ b/src/snippets/collection-filters.liquid
@@ -1,6 +1,6 @@
 <div class="collection-filters">
   <h3 class="collection-filters__title">
-    Collection Filters
+    Filters
   </h3>
 
   {% include 'collection-filter-color' %}
