--- a/src/styles/components/collection-filters.scss
+++ b/src/styles/components/collection-filters.scss
@@ -1,9 +1,13 @@
 .collection-filters {
-  display: flex;
+  display: none;
   flex-direction: column;
   flex: 1;
   width: 25%;
   background-color: #eee;
+
+  @include mq('large') {
+    display: flex;
+  }
 }
 
 .collection-filters__title {
