refactor: edit collection-filters snippet

--- a/src/snippets/collection-filters.liquid
+++ b/src/snippets/collection-filters.liquid
@@ -6,8 +6,8 @@
   {% include 'collection-filter-color' %}
 
   {% assign filter = 'Size' %}
-  {% include 'collection-filter' %}
+  {% include 'collection-filter' with filter %}
 
   {% assign filter = 'Brand' %}
-  {% include 'collection-filter' %}
+  {% include 'collection-filter' with filter %}
 </div>
