feat: update collection card styles

--- a/src/styles/components/collection-card.scss
+++ b/src/styles/components/collection-card.scss
@@ -10,7 +10,7 @@
 
   &:hover {
     .collection-card__variants {
-      max-height: initial;
+      max-height: 50px;
       opacity: 1;
     }
   }
