--- a/src/snippets/collection-filter-color.liquid
+++ b/src/snippets/collection-filter-color.liquid
@@ -1,8 +1,7 @@
-<div class="collection-filter">
-  <h4 class="collection-filter__title">
-    Color
-  </h4>
-
+<div
+  class="collection-filter"
+  data-collection-filter-container
+>
   <ul class="collection-filter__list collection-filter__list--color">
     {% for tag in collection.all_tags %}
       {% if tag contains 'filter-color-' %}
