--- a/src/snippets/collection-cards.liquid
+++ b/src/snippets/collection-cards.liquid
@@ -10,6 +10,8 @@
       </button>
     </h2>
 
+    {% include 'collection-sort' %}
+
     <p class="collection-cards__description">
       {{ collection.description }}
     </p>
