feat: add filters icon

--- a/src/snippets/collection-cards.liquid
+++ b/src/snippets/collection-cards.liquid
@@ -6,7 +6,7 @@
       (<span class="collection-cards__title-count">{{ collection.all_products_count }}</span>)
 
       <button class="collection-cards__filter-toggle" data-filter-toggle>
-        {% include 'icon-hamburger' %}
+        {% include 'icon-filters' %}
       </button>
     </h2>
 
