--- a/src/styles/components/collection-cards.scss
+++ b/src/styles/components/collection-cards.scss
@@ -25,8 +25,17 @@
   margin-left: auto;
 
   > svg {
-    width: 40px;
-    height: 40px;
+    height: 60px;
+    width: 60px;
+    padding: 15px;
+    cursor: pointer;
+    transition: color $transition;
+  }
+
+  &:hover {
+    > svg {
+      color: $color-grey-darker;
+    }
   }
 
   @include mq('large') {
