--- a/src/styles/components/collection-cards.scss
+++ b/src/styles/components/collection-cards.scss
@@ -10,9 +10,25 @@
   }
 }
 
+.collection-cards__title-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+
+  @include mq('large') {
+    flex-wrap: nowrap;
+  }
+}
+
 .collection-cards__title {
   display: flex;
-  align-items: center;
+  flex-basis: 100%;
+  justify-content: center;
+
+  @include mq('large') {
+    flex-basis: initial;
+  }
 }
 
 .collection-cards__container {
@@ -23,8 +39,10 @@
 .collection-cards__filter-toggle {
   display: flex;
   margin-left: auto;
+  order: 2;
 
   > svg {
+    margin-left: auto;
     height: 60px;
     width: 60px;
     padding: 15px;
