fix: add slick slider missing styles

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -3,6 +3,10 @@
 // Uncomment to include normalize.css
 // @import '~normalize.css/normalize';
 
+// Vendors
+@import "vendor/slick/slick.scss";
+@import "vendor/slick/slick-theme.scss";
+
 // Helpers
 @import 'helpers/index';
 
