--- a/src/snippets/collection-sort.liquid
+++ b/src/snippets/collection-sort.liquid
@@ -1,7 +1,8 @@
 <nav class="collection-sort__container">
+  {% assign sort_options = 'manual,price-ascending,price-descending,created-descending,best-selling' | split: ',' %}
   <select
     class="collection-sort collection-sort--mobile"
-    data-collection-sort
+    data-collection-sort="{{ collection.sort_by | default: collection.default_sort_by | escape }}"
     data-custom-select
   >
     <option value="manual">Sort</option>
