--- a/src/styles/templates/collection/index.scss
+++ b/src/styles/templates/collection/index.scss
@@ -8,3 +8,4 @@
 @import '../../components/collection-filter';
 @import '../../components/collection-cards';
 @import '../../components/collection-card';
+@import '../../components/pagination';
