--- a/src/styles/components/pagination.scss
+++ b/src/styles/components/pagination.scss
@@ -1,9 +1,9 @@
 .pagination {
   max-width: 320px;
-  margin: 15px auto 0;
+  margin: 15px auto;
   display: flex;
   flex-basis: 100%;
-  justify-content: space-between;
+  justify-content: center;
   font-size: 16px;
   color: $color-body-text;
 
@@ -15,6 +15,15 @@
     padding: 15px;
     display: flex;
     justify-content: center;
+    transition: background $transition;
+  }
+
+  a,
+  .next a,
+  .prev a {
+    &:hover {
+      background: $color-grey-light;
+    }
   }
 
   .page.current {
