feat: update collection-sort.scss

--- a/src/styles/components/collection-sort.scss
+++ b/src/styles/components/collection-sort.scss
@@ -1,5 +1,12 @@
 .collection-sort__container {
+  display: flex;
+  height: 60px;
+  align-items: center;
+
   @include mq('large') {
+    height: initial;
+    align-items: initial;
+
     .edd-root {
       display: none;
     }
