fix: collection-card product url

--- a/src/snippets/collection-card.liquid
+++ b/src/snippets/collection-card.liquid
@@ -1,5 +1,5 @@
 <a
-  href="/products/{{ product.url }}"
+  href="{{ product.url }}"
   class="collection-card__link"
 >
   <div class="collection-card">
