feat: add inline cart component

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -74,6 +74,8 @@
       {{ content_for_layout }}
     </main>
 
+    {% include 'inline-cart' %}
+
     {% include 'footer' %}
 
     {% include 'external-scripts' %}
