--- a/src/snippets/header-cart-button.liquid
+++ b/src/snippets/header-cart-button.liquid
@@ -1,3 +1,6 @@
-<button class="header-cart-button">
+<button
+  class="header-cart-button"
+  data-inline-cart-toggle
+>
   {% include 'icon-cart' %}
 </button>
