--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -20,6 +20,8 @@
 @import 'components/header';
 @import 'components/instagram';
 @import 'components/footer';
+@import 'components/cart';
+@import 'components/inline-cart';
 
 // Shame
 // @import 'base/shame';
