feat: add simple product template

--- a/src/templates/product.liquid
+++ b/src/templates/product.liquid
@@ -1,1 +1,10 @@
 {% comment %}product{% endcomment %}
+<h1>Product Template</h1>
+
+{{ product | json }}
+
+<div>
+  <button id="add-to-cart">Add to cart</button>
+  <br>
+  <button id="add-to-cart-2">Add to cart</button>
+</div>
