feat: add inline-cart component markup and styles

--- a/src/snippets/inline-cart.liquid
+++ b/src/snippets/inline-cart.liquid
@@ -7,7 +7,8 @@
     <button
       class="inline-cart__btn"
       data-inline-cart-close
-    >X
+    >
+      {% include 'icon-plus' %}
     </button>
   </div>
 
@@ -30,7 +31,7 @@
       <a
         href="/checkout"
         name="checkout"
-        class="inline-cart__btn"
+        class="inline-cart__checkout"
       >
         CHECK OUT
       </a>
