--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -20,8 +20,8 @@
 @import 'components/header';
 @import 'components/instagram';
 @import 'components/footer';
-@import 'components/cart';
 @import 'components/inline-cart';
+@import 'components/cart-line-item';
 
 // Shame
 // @import 'base/shame';
