refactor: inline cart component

--- a/src/templates/cart.contents.liquid
+++ b/src/templates/cart.contents.liquid
@@ -27,7 +27,10 @@
       </button>
     </div>
 
-    <div class="cart-line-item__edit-container">
+    <div
+      class="cart-line-item__edit-container"
+      data-cart-line-item-edit-container
+    >
       <div class="cart-line-item__edit-title">
         Edit Quantity
       </div>
