--- a/src/snippets/inline-cart.liquid
+++ b/src/snippets/inline-cart.liquid
@@ -26,7 +26,7 @@
       <hr>
       <p class="inline-cart__subtotal-container">
         Subtotal:
-        <span class="inline-cart__subtotal-container"></span>
+        <span class="inline-cart__subtotal" data-inline-cart-subtotal></span>
       </p>
       <a
         href="/checkout"
