--- a/src/styles/components/cart-line-item.scss
+++ b/src/styles/components/cart-line-item.scss
@@ -104,6 +104,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  width: 110px;
 }
 
 .cart-line-item__edit-title {
