--- a/src/templates/cart.contents.liquid
+++ b/src/templates/cart.contents.liquid
@@ -1,6 +1,6 @@
 {% layout none %}
 {% for line_item in cart.items %}
-<div class="cart-line-item" data-cart-line-item>
+<div class="cart-line-item" data-cart-line-item data-cart-line-item-product-id={{ line_item.product_id }}>
   <div class="cart-line-item__image">
     <img src="{{ line_item.product.featured_image | img_url: 'small' }}" alt="{{ line_item.product.description }}" />
   </div>
@@ -46,7 +46,9 @@
       <div
         class="cart-line-item__edit-qty"
         data-cart-line-item-edit-qty
-      >1</div>
+      >
+        {{ line_item.quantity }}
+      </div>
       <button
         class="cart-line-item__edit-btn"
         data-cart-line-item-edit-plus
