--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -21,7 +21,7 @@
 @import 'components/instagram';
 @import 'components/footer';
 @import 'components/inline-cart';
-@import 'components/cart-line-item';
+@import 'components/line-item';
 
 // Shame
 // @import 'base/shame';
