--- a/src/templates/cart.contents.liquid
+++ b/src/templates/cart.contents.liquid
@@ -8,40 +8,40 @@
 </div>
 {% for line_item in cart.items %}
 <div
-  class="cart-line-item"
-  data-cart-line-item
-  data-cart-line-item-product-variant-id={{ line_item.variant_id }}
+  class="line-item"
+  data-line-item
+  data-line-item-product-variant-id={{ line_item.variant_id }}
 >
-  <div class="cart-line-item__image">
+  <div class="line-item__image">
     <img
       src="{{ line_item.product.featured_image | img_url: 'small' }}"
       alt="{{ line_item.product.description }}"
     />
   </div>
 
-  <div class="cart-line-item__container">
-    <div class="cart-line-item__title">
+  <div class="line-item__container">
+    <div class="line-item__title">
       {{ line_item.title }}
     </div>
 
-    <div class="cart-line-item__container-extra">
+    <div class="line-item__container-extra">
       <div
-        class="cart-line-item__quantity"
-        data-cart-line-item-qty
+        class="line-item__quantity"
+        data-line-item-qty
       >
         QTY: {{ line_item.quantity }}
       </div>
     
       <div
-        class="cart-line-item__price"
-        data-cart-line-item-price
+        class="line-item__price"
+        data-line-item-price
       >
         {{ line_item.price | money }}
       </div>
 
       <button
-        class="cart-line-item__expand"
-        data-cart-line-item-expand
+        class="line-item__expand"
+        data-line-item-expand
       >
         {% include 'icon-arrow-down' %}
       </button>
@@ -49,37 +49,37 @@
   </div>
 
   <div
-    class="cart-line-item__edit-container"
-    data-cart-line-item-edit-container
+    class="line-item__edit-container"
+    data-line-item-edit-container
   >
-    <div class="cart-line-item__edit-title">
+    <div class="line-item__edit-title">
       Edit Quantity
     </div>
     <div
-      class="cart-line-item__edit"
-      data-cart-line-item-edit
+      class="line-item__edit"
+      data-line-item-edit
     >
       <button
-        class="cart-line-item__edit-btn"
-        data-cart-line-item-edit-minus
-        data-cart-line-item-edit-qty="-1"
+        class="line-item__edit-btn"
+        data-line-item-edit-minus
+        data-line-item-edit-qty="-1"
       >-</button>
       <div
-        class="cart-line-item__edit-qty"
-        data-cart-line-item-qty-val
+        class="line-item__edit-qty"
+        data-line-item-qty-val
       >
         {{ line_item.quantity }}
       </div>
       <button
-        class="cart-line-item__edit-btn"
-        data-cart-line-item-edit-plus
-        data-cart-line-item-edit-qty="1"
+        class="line-item__edit-btn"
+        data-line-item-edit-plus
+        data-line-item-edit-qty="1"
       >+</button>
     </div>
     <button
-      class="cart-line-item__remove"
+      class="line-item__remove"
       data-variant-id="{{ line_item.variant_id }}"
-      data-cart-line-item-remove
+      data-line-item-remove
     >
       Remove item
     </button>
@@ -88,10 +88,10 @@
 {% endfor %}
 
 {% if cart.item_count > 0 %}
-  <div class="cart-line-item__footer">
+  <div class="line-item__footer">
     <hr>
     <div
-      class="cart-line-item__subtotal"
+      class="line-item__subtotal"
       data-inline-cart-subtotal
     >
       Subtotal: {{ cart.total_price | money }}
@@ -99,7 +99,7 @@
     <a
       href="/checkout"
       name="checkout"
-      class="cart-line-item__checkout"
+      class="line-item__checkout"
       data-inline-cart-checkout
     >
       CHECK OUT
